[package]
name = "tarminal-session-gist-save"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "CLI to save terminal session logs to GitHub Gist"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread"] }
